tests/baselines/reference/generics5.errors.txt
generics5.ts(10,14): error TS2344: Type 'A' does not satisfy the constraint 'B'.
  Property 'b' is missing in type 'A' but required in type 'B'.


==== generics5.ts (1 errors) ====
    interface A { a: string; }
    interface B extends A { b: string; }
    
    interface C extends B { c: string; }
    interface G<T, U extends B> {
    
    
    }
    
    var v3: G<A, A>;               // Error, A not valid argument for U
                 ~
!!! error TS2344: Type 'A' does not satisfy the constraint 'B'.
!!! error TS2344:   Property 'b' is missing in type 'A' but required in type 'B'.
!!! related TS2728 generics5.ts:2:25: 'b' is declared here.
    
    